Story dfcc 318 review and amend validations for post events (#28)
* Refactored web chat production warning message to make tidier

* Refactor warnings

* Refactored page titles to use common constant

* Revised validations for Enter your details view

* Fix SonarCloud code smell reports

* improve callback time validation

* Updated date and time validations presentation

--- a/DFC.App.ContactUs/Views/Shared/EditorTemplates/MultilineText.cshtml
+++ b/DFC.App.ContactUs/Views/Shared/EditorTemplates/MultilineText.cshtml
@@ -2,6 +2,9 @@
 @using System.ComponentModel.DataAnnotations
 
 @{
+    const string govukFormGroupErrorClass = "govuk-form-group--error";
+    const string govukInputErrorClass = "govuk-input--error";
+    var showErrorClassForInput = string.Empty;
     var hintId = string.Empty;
     var member = ViewData.ModelMetadata.ContainerType.GetMember(ViewData.ModelMetadata.PropertyName);
     var strLenAttr = member[0].GetCustomAttributes(typeof(StringLengthAttribute), false).Cast<StringLengthAttribute>().FirstOrDefault();
@@ -12,7 +15,8 @@
     {
         if (ViewData.ModelState[errorKey] != null && ViewData.ModelState[errorKey].Errors.Any())
         {
-            showErrorClass = "govuk-form-group--error";
+            showErrorClassForInput = govukInputErrorClass;
+            showErrorClass = govukFormGroupErrorClass;
         }
     }
 }
@@ -33,11 +37,7 @@
 
     @Html.TextAreaFor(model => model, new
     {
-        @class = "govuk-textarea govuk-js-character-count",
-        title = ViewData.ModelMetadata.Description,
-        placeholder = ViewData.ModelMetadata.Placeholder,
-        data_toggle = "tooltip",
-        data_placement = "bottom",
+        @class = "govuk-textarea govuk-js-character-count " + showErrorClassForInput,
         autocomplete = "off",
         aria_describedby = hintId,
         rows = 5,
