--- a/DFC.App.ContactUs/Views/Shared/EditorTemplates/TelephoneNumber.cshtml
+++ b/DFC.App.ContactUs/Views/Shared/EditorTemplates/TelephoneNumber.cshtml
@@ -1,6 +1,9 @@
 ﻿@model string
 
 @{
+    const string govukFormGroupErrorClass = "govuk-form-group--error";
+    const string govukInputErrorClass = "govuk-input--error";
+    var showErrorClassForInput = string.Empty;
     var hintId = string.Empty;
     var showErrorClass = string.Empty;
     var errorKey = ViewData.ModelMetadata.PropertyName;
@@ -9,7 +12,8 @@
     {
         if (ViewData.ModelState[errorKey] != null && ViewData.ModelState[errorKey].Errors.Any())
         {
-            showErrorClass = "govuk-form-group--error";
+            showErrorClassForInput = govukInputErrorClass;
+            showErrorClass = govukFormGroupErrorClass;
         }
     }
 }
@@ -30,12 +34,8 @@
 
     @Html.TextBoxFor(model => model, new
     {
-        @class = "govuk-input govuk-input--width-20",
+        @class = "govuk-input govuk-input--width-20 " + showErrorClassForInput,
         @type = "tel",
-        title = ViewData.ModelMetadata.Description,
-        placeholder = ViewData.ModelMetadata.Placeholder,
-        data_toggle = "tooltip",
-        data_placement = "bottom",
         autocomplete = ViewData.ModelMetadata.Name,
         aria_describedby = hintId
     })
