--- a/DFC.App.ContactUs/Views/EnterYourDetails/EnterYourDetailsView.cshtml
+++ b/DFC.App.ContactUs/Views/EnterYourDetails/EnterYourDetailsView.cshtml
@@ -12,7 +12,7 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-        <form asp-route="/pages/enter-your-details" method="post">
+        <form asp-route="/pages/enter-your-details" method="post" class="compui-validation">
 
             <partial name="EnterYourDetailsForm" model="@Model.EnterYourDetailsBodyViewModel" />
 
