--- a/DFC.App.ContactUs/Views/Shared/EditorTemplates/DateEditor.cshtml
+++ b/DFC.App.ContactUs/Views/Shared/EditorTemplates/DateEditor.cshtml
@@ -10,8 +10,6 @@
         { Html.NameFor(model => model.Day), string.Empty },
         { Html.NameFor(model => model.Month), string.Empty },
         { Html.NameFor(model => model.Year), string.Empty },
-        { Html.NameFor(model => model.Hour), string.Empty },
-        { Html.NameFor(model => model.Minute), string.Empty },
     };
 
     foreach (var errorKey in errorFieldClass.Keys.ToList())
@@ -29,9 +27,7 @@
 }
 
 <div class="govuk-form-group @showErrorClass">
-    <h2 class="govuk-heading-l">
-        @Html.DisplayNameFor(model => model)
-    </h2>
+    @Html.LabelFor(model => model, new { @class = "govuk-label" })
 
     @if (errorFieldClass[Html.NameFor(model => model)] != string.Empty)
     {
@@ -48,14 +44,6 @@
     else @if (errorFieldClass[Html.NameFor(model => model.Year)] != string.Empty)
     {
         @Html.ValidationMessageFor(model => model.Year, string.Empty, new { @class = "govuk-error-message", @id = Html.NameFor(model => model.Year) + "-error" })
-    }
-    else @if (errorFieldClass[Html.NameFor(model => model.Hour)] != string.Empty)
-    {
-        @Html.ValidationMessageFor(model => model.Hour, string.Empty, new { @class = "govuk-error-message", @id = Html.NameFor(model => model.Hour) + "-error" })
-    }
-    else @if (errorFieldClass[Html.NameFor(model => model.Minute)] != string.Empty)
-    {
-        @Html.ValidationMessageFor(model => model.Minute, string.Empty, new { @class = "govuk-error-message", @id = Html.NameFor(model => model.Minute) + "-error" })
     }
     else
     { 
@@ -94,32 +82,6 @@
             @Html.TextBoxFor(model => model.Year, new
             {
                 @class = "govuk-input govuk-date-input__input govuk-input--width-4 " + errorFieldClass[Html.NameFor(model => model)] + " " + errorFieldClass[Html.NameFor(model => model.Year)],
-                data_rule_CompUiValidationForDate = ViewData.ModelMetadata.DisplayName,
-                data_rule_required = "false",
-                autocomplete = "off",
-                type = "text",
-                pattern = "[0-9]*",
-                inputmode = "numeric"
-            })
-        </div>
-        <div class="govuk-date-input__item">
-            @Html.LabelFor(model => model.Hour, new { @class = "govuk-label govuk-date-input__label" })
-            @Html.TextBoxFor(model => model.Hour, new
-            {
-                @class = "govuk-input govuk-date-input__input govuk-input--width-2 " + errorFieldClass[Html.NameFor(model => model)] + " " + errorFieldClass[Html.NameFor(model => model.Hour)],
-                data_rule_CompUiValidationForDate = ViewData.ModelMetadata.DisplayName,
-                data_rule_required = "false",
-                autocomplete = "off",
-                type = "text",
-                pattern = "[0-9]*",
-                inputmode = "numeric"
-            })
-        </div>
-        <div class="govuk-date-input__item">
-            @Html.LabelFor(model => model.Minute, new { @class = "govuk-label govuk-date-input__label" })
-            @Html.TextBoxFor(model => model.Minute, new
-            {
-                @class = "govuk-input govuk-date-input__input govuk-input--width-2 " + errorFieldClass[Html.NameFor(model => model)] + " " + errorFieldClass[Html.NameFor(model => model.Minute)],
                 data_rule_CompUiValidationForDate = ViewData.ModelMetadata.DisplayName,
                 data_rule_required = "false",
                 autocomplete = "off",
