--- a/DFC.App.ContactUs/Views/Shared/_LocalCss.cshtml
+++ b/DFC.App.ContactUs/Views/Shared/_LocalCss.cshtml
@@ -4,3 +4,4 @@
 
 <link href="@cdnLocation/css/all.min.css" rel="stylesheet" type="text/css" />
 
+<link href="~/css/dfc-app-contactus.css" rel="stylesheet" type="text/css" asp-append-version="true" />
