--- a/DFC.App.ContactUs/Views/Shared/_LocalJs.cshtml
+++ b/DFC.App.ContactUs/Views/Shared/_LocalJs.cshtml
@@ -8,4 +8,11 @@
 <script>window.GOVUKFrontend.initAll()</script>
 
 <script src="@cdnLocation/js/dfcdigital.min.js"></script>
-<script src="@cdnLocation/js/compui.min.js"></script>
+@*<script src="@cdnLocation/js/compui.min.js"></script>*@
+
+
+
+<script src="~/js/compui-utilities.js" asp-append-version="true"></script>
+<script src="~/js/compui-validation.js" asp-append-version="true"></script>
+<script src="~/js/apps/dfc-app-contactus.js "asp-append-version="true"></script>
+<script src="~/js/compui-shell.js" asp-append-version="true"></script>
