--- a/DFC.App.ContactUs/Views/WhyContactUs/WhyContactUsView.cshtml
+++ b/DFC.App.ContactUs/Views/WhyContactUs/WhyContactUsView.cshtml
@@ -13,7 +13,7 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-        <form asp-route="/pages/why-do-you-want-to-contact-us" method="post">
+        <form asp-route="/pages/why-do-you-want-to-contact-us" method="post" class="compui-validation">
 
             <partial name="WhyContactUsForm" model="@Model.WhyContactUsBodyViewModel" />
 
