--- a/DFC.App.ContactUs/Views/EnterYourDetails/EnterYourDetailsBody.cshtml
+++ b/DFC.App.ContactUs/Views/EnterYourDetails/EnterYourDetailsBody.cshtml
@@ -1,6 +1,6 @@
 ﻿@model EnterYourDetailsBodyViewModel
 
-<form asp-route="/contact-us/enter-your-details" method="post">
+<form asp-route="/contact-us/enter-your-details" method="post" class="compui-validation">
 
     <partial name="EnterYourDetailsForm" model="@Model" />
 
