--- a/DFC.App.ContactUs/Views/Home/HomeBody.cshtml
+++ b/DFC.App.ContactUs/Views/Home/HomeBody.cshtml
@@ -1,6 +1,6 @@
 ﻿@model HomeBodyViewModel
 
-<form asp-route="/contact-us/home" method="post">
+<form asp-route="/contact-us/home" method="post" class="compui-validation">
 
     <partial name="HomeForm" model="@Model" />
 
