--- a/DFC.App.ContactUs/Views/Home/HomeView.cshtml
+++ b/DFC.App.ContactUs/Views/Home/HomeView.cshtml
@@ -13,7 +13,7 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-        <form asp-route="/pages/home" method="post">
+        <form asp-route="/pages/home" method="post" class="compui-validation">
 
             <partial name="HomeForm" model="@Model.HomeBodyViewModel" />
 
