--- a/DFC.App.ContactUs/Views/WhyContactUs/WhyContactUsBody.cshtml
+++ b/DFC.App.ContactUs/Views/WhyContactUs/WhyContactUsBody.cshtml
@@ -1,6 +1,6 @@
 ﻿@model WhyContactUsBodyViewModel
 
-<form asp-route="/contact-us/why-do-you-want-to-contact-us" method="post">
+<form asp-route="/contact-us/why-do-you-want-to-contact-us" method="post" class="compui-validation">
 
     <partial name="WhyContactUsForm" model="@Model" />
 
