--- a/DFC.App.ContactUs/Views/_ViewImports.cshtml
+++ b/DFC.App.ContactUs/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using DFC.App.ContactUs.Enums
 @using DFC.App.ContactUs.Extensions
 @using DFC.App.ContactUs.ViewModels
+@using System.ComponentModel.DataAnnotations
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
