--- a/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
+++ b/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
@@ -9,7 +9,7 @@
         </legend>
         <p>
             Call @Model.ServiceOpenDetailModel.PhoneNumber to speak to an adviser. Lines are open from  @Model.ServiceOpenDetailModel.OpenTimesString,  @Model.ServiceOpenDetailModel.OpenDays. Calls are free from landlines and most mobile numbers.
-            Find out more about <a href="https://www.gov.uk/call-charges">call charges and freephone numbers</a>
+            Find out more about <a href="https://www.gov.uk/call-charges">call charges and freephone numbers</a>.
         </p>
         <p class="govuk-body">
             If you do not want to call us, you can also:
