--- a/DFC.App.ContactUs/Views/EnterYourDetails/EditorTemplates/Postcode.cshtml
+++ b/DFC.App.ContactUs/Views/EnterYourDetails/EditorTemplates/Postcode.cshtml
@@ -1,6 +1,9 @@
-﻿@model Boolean
+﻿@model string
 
-@{
+@{ 
+    const string govukFormGroupErrorClass = "govuk-form-group--error";
+    const string govukInputErrorClass = "govuk-input--error";
+    var showErrorClassForInput = string.Empty;
     var hintId = string.Empty;
     var showErrorClass = string.Empty;
     var errorKey = ViewData.ModelMetadata.PropertyName;
@@ -9,15 +12,14 @@
     {
         if (ViewData.ModelState[errorKey] != null && ViewData.ModelState[errorKey].Errors.Any())
         {
-            showErrorClass = "govuk-form-group--error";
+            showErrorClassForInput = govukInputErrorClass;
+            showErrorClass = govukFormGroupErrorClass;
         }
     }
 }
 
 <div class="govuk-form-group @showErrorClass">
-    <h3 class="govuk-heading">
-        @Html.DisplayNameFor(model => model)
-    </h3>
+    @Html.LabelFor(model => model, new { @class = "govuk-label" })
 
     @if (!string.IsNullOrWhiteSpace(ViewData.ModelMetadata.Description))
     {
@@ -30,16 +32,10 @@
 
     @Html.ValidationMessageFor(model => model, string.Empty, new { @class = "govuk-error-message", @id = ViewData.ModelMetadata.Name + "-error" })
 
-    <div class="govuk-checkboxes">
-        <div class="govuk-checkboxes__item">
-            @Html.CheckBoxFor(model => model, new
-            {
-                @class = "govuk-checkboxes__input",
-                autocomplete = "off",
-                aria_describedby = hintId
-            })
-
-            <label class="govuk-label govuk-checkboxes__label" for="@ViewData.ModelMetadata.Name">I accept the <a class='govuk-link' href='/help/terms-and-conditions' target='_blank'>terms and conditions</a> and I am 13 or over.</label>
-        </div>
-    </div>
+    @Html.TextBoxFor(model => model, new
+    {
+        @class = "govuk-input govuk-input--width-10 " + showErrorClassForInput,
+        autocomplete = "off",
+        aria_describedby = hintId
+    })
 </div>
