Removed local scripts used when developing locally

--- a/DFC.App.ContactUs/Views/EnterYourDetails/EditorTemplates/TermsAndConditions.cshtml
+++ b/DFC.App.ContactUs/Views/EnterYourDetails/EditorTemplates/TermsAndConditions.cshtml
@@ -39,7 +39,7 @@
                 aria_describedby = hintId
             })
 
-            <label class="govuk-label govuk-checkboxes__label" for="@ViewData.ModelMetadata.Name">@ViewData.ModelMetadata.Placeholder</label>
+            <label class="govuk-label govuk-checkboxes__label" for="@ViewData.ModelMetadata.Name">I accept the <a class='govuk-link' href='/help/terms-and-conditions' target='_blank'>terms and conditions</a> and I am 13 or over.</label>
         </div>
     </div>
 </div>
