--- a/DFC.App.ContactUs/Views/Shared/_ErrorSummary.cshtml
+++ b/DFC.App.ContactUs/Views/Shared/_ErrorSummary.cshtml
@@ -1,5 +1,11 @@
 ﻿@if (!ViewData.ModelState.IsValid)
 {
+    ViewData["Title"] = "Error: " + ViewData["Title"];
+
+    <script type="text/javascript">
+        document.title = '@ViewBag.Title';
+    </script>
+
     <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
         <h2 class="govuk-error-summary__title" id="error-summary-title">
             There is a problem
