--- a/DFC.App.ContactUs/Views/Pages/Document.cshtml
+++ b/DFC.App.ContactUs/Views/Pages/Document.cshtml
@@ -23,6 +23,34 @@
                 </dd>
 
                 <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.CanonicalName)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.CanonicalName)
+                </dd>
+
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.PartitionKey)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.PartitionKey)
+                </dd>
+
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.SequenceNumber)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.SequenceNumber)
+                </dd>
+
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Version)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Version)
+                </dd>
+
+                <dt class="col-sm-2">
                     @Html.DisplayNameFor(model => model.HtmlHead!.Description)
                 </dt>
                 <dd class="col-sm-10">
@@ -73,13 +101,6 @@
                 </dd>
 
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.Content)
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.Raw(Model.Content)
-                </dd>
-
-                <dt class="col-sm-2">
                     @Html.DisplayNameFor(model => model.LastReviewed)
                 </dt>
                 <dd class="col-sm-10">
@@ -102,6 +123,8 @@
                 }
             </dl>
         </div>
+
+        <hr />
 
         <partial name="Body" model=@Model.BodyViewModel />
     </div>
