--- a/DFC.App.ContactUs/Views/Shared/EditorTemplates/TelephoneNumber.cshtml
+++ b/DFC.App.ContactUs/Views/Shared/EditorTemplates/TelephoneNumber.cshtml
@@ -35,7 +35,8 @@
     @Html.TextBoxFor(model => model, new
     {
         @class = "govuk-input govuk-input--width-20 " + showErrorClassForInput,
-        @type = "tel",
+        type = "tel",
+        maxLength = "20",
         autocomplete = ViewData.ModelMetadata.Name,
         aria_describedby = hintId
     })
