--- a/DFC.App.ContactUs/Views/Shared/_LocalCss.cshtml
+++ b/DFC.App.ContactUs/Views/Shared/_LocalCss.cshtml
@@ -4,4 +4,5 @@
 
 <link href="@cdnLocation/css/all.min.css" rel="stylesheet" type="text/css" />
 
-@*<link href="~/css/dfc-app-contactus.css" rel="stylesheet" type="text/css" asp-append-version="true" />*@
+@*<link href="~/css/dfc-composite-shell.css" rel="stylesheet" type="text/css" asp-append-version="true" />
+    <link href="~/css/dfc-app-contactus.css" rel="stylesheet" type="text/css" asp-append-version="true" />*@
