--- a/DFC.App.ContactUs/Views/Shared/_LocalLayout.cshtml
+++ b/DFC.App.ContactUs/Views/Shared/_LocalLayout.cshtml
@@ -11,6 +11,8 @@
     <div class="govuk-width-container">
         <main class="govuk-main-wrapper" id="main-content" role="main">
 
+            <partial name="_ErrorSummary" />
+
             @RenderBody()
 
         </main>
