Reviewed input lengths and amended accordingly

--- a/DFC.App.ContactUs/Views/Shared/EditorTemplates/EmailAddress.cshtml
+++ b/DFC.App.ContactUs/Views/Shared/EditorTemplates/EmailAddress.cshtml
@@ -35,7 +35,8 @@
     @Html.TextBoxFor(model => model, new
     {
         @class = "govuk-input " + showErrorClassForInput,
-        @type = "email",
+        type = "email",
+        maxLength = "100",
         autocomplete = ViewData.ModelMetadata.Name,
         spellcheck = "false",
         aria_describedby = hintId
