Updated validation messages (#37)
* Updated validation messages

* Corrections to unit tests for new validation error messages

* fix for SonarCloud

* Updated unit test for code coverage

* Reviewed input lengths and amended accordingly

* Removed bad template

--- a/DFC.App.ContactUs/Views/Shared/EditorTemplates/PersonName.cshtml
+++ b/DFC.App.ContactUs/Views/Shared/EditorTemplates/PersonName.cshtml
@@ -36,6 +36,7 @@
     {
         @class = "govuk-input " + showErrorClassForInput,
         autocomplete = ViewData.ModelMetadata.Name,
+        maxLength = "100",
         spellcheck = "false",
         aria_describedby = hintId
     })
