--- a/DFC.App.ContactUs/Views/_ViewImports.cshtml
+++ b/DFC.App.ContactUs/Views/_ViewImports.cshtml
@@ -4,3 +4,4 @@
 @using DFC.App.ContactUs.ViewModels
 @using System.ComponentModel.DataAnnotations
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, DFC.App.ContactUs
