Updated callback validation error messages

--- a/DFC.App.ContactUs/Views/EnterYourDetails/EnterYourDetailsForm.cshtml
+++ b/DFC.App.ContactUs/Views/EnterYourDetails/EnterYourDetailsForm.cshtml
@@ -17,12 +17,23 @@
         @Html.EditorFor(model => model.FamilyName)
         @Html.EditorFor(model => model.EmailAddress)
         @Html.EditorFor(model => model.TelephoneNumber)
-        @Html.EditorFor(model => model.DateOfBirth)
+        @Html.EditorFor(model => model.DateOfBirth, new { 
+            ErrorMessageFieldName = "Your date of birth", 
+            minDate = "1900-01-01", 
+            maxDate = DateTime.Today.AddYears(-13).ToString("yyyy-MM-dd"),
+            dateRangeError = "You must be over 13 to use this service"
+        })
         @Html.EditorFor(model => model.Postcode)
 
         @if (Model.CallbackDateTimeIsRequired)
         {
-            @Html.EditorFor(model => model.CallbackDateTime, new { ShowLabelAsHeader = "yes" })
+            @Html.EditorFor(model => model.CallbackDateTime, new { 
+                ErrorMessageFieldName = "The callback date and time", 
+                minDate = DateTime.Today.ToString("yyyy-MM-dd"), 
+                maxDate = DateTime.Today.AddMonths(3).ToString("yyyy-MM-dd"),
+                dateRangeError = "The callback date and time must be within 3 months",
+                ShowLabelAsHeader = "yes" 
+            })
         }
 
         @Html.EditorFor(model => model.TermsAndConditionsAccepted,
