--- a/DFC.App.ContactUs/Views/Home/EditorTemplates/HomeOption.cshtml
+++ b/DFC.App.ContactUs/Views/Home/EditorTemplates/HomeOption.cshtml
@@ -24,7 +24,7 @@
                 var radioId = option == HomeOption.Webchat ? nameof(HomeBodyViewModel.SelectedOption) : $"{option}-option";
 
                 <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" name="@nameof(HomeBodyViewModel.SelectedOption)" id="@radioId" type="radio" value="@option">
+                    <input class="govuk-radios__input" name="@nameof(HomeBodyViewModel.SelectedOption)" id="@radioId" type="radio" value="@option" data-val="true" data-val-required="@HomeBodyViewModel.SelectedOptionValidationError">
                     <label class="govuk-label govuk-radios__label" for="@radioId">@option.GetDescription()</label>
                 </div>
             }
