Fix scrolling issue when T&C error is clicked. Was missing a fieldset, now added

--- a/DFC.App.ContactUs/Views/EnterYourDetails/EnterYourDetailsForm.cshtml
+++ b/DFC.App.ContactUs/Views/EnterYourDetails/EnterYourDetailsForm.cshtml
@@ -17,9 +17,10 @@
         @Html.EditorFor(model => model.FamilyName)
         @Html.EditorFor(model => model.EmailAddress)
         @Html.EditorFor(model => model.TelephoneNumber)
-        @Html.EditorFor(model => model.DateOfBirth, new { 
-            ErrorMessageFieldName = "Your date of birth", 
-            minDate = "1900-01-01", 
+        @Html.EditorFor(model => model.DateOfBirth, new
+        {
+            ErrorMessageFieldName = "Your date of birth",
+            minDate = "1900-01-01",
             maxDate = DateTime.Today.AddYears(-13).ToString("yyyy-MM-dd"),
             dateRangeError = "You must be over 13 to use this service"
         })
@@ -27,21 +28,22 @@
 
         @if (Model.CallbackDateTimeIsRequired)
         {
-            @Html.EditorFor(model => model.CallbackDateTime, new { 
-                ErrorMessageFieldName = "The callback date and time", 
-                minDate = DateTime.Today.ToString("yyyy-MM-dd"), 
+            @Html.EditorFor(model => model.CallbackDateTime, new
+            {
+                ErrorMessageFieldName = "The callback date and time",
+                minDate = DateTime.Today.ToString("yyyy-MM-dd"),
                 maxDate = DateTime.Today.AddMonths(3).ToString("yyyy-MM-dd"),
                 dateRangeError = "The callback date and time must be within 3 months",
-                ShowLabelAsHeader = "yes" 
+                ShowLabelAsHeader = "yes"
             })
         }
 
-        @Html.EditorFor(model => model.TermsAndConditionsAccepted,
-            new {
-                Label = EnterYourDetailsBodyViewModel.TermsAndConditionsLabel,
-                ErrorMessage = EnterYourDetailsBodyViewModel.TermsAndConditionsValidationError,
-                CompareTo = $"*.{nameof(EnterYourDetailsBodyViewModel.IsTrue)}"
-            })
+        @Html.EditorFor(model => model.TermsAndConditionsAccepted, new
+        {
+            Label = EnterYourDetailsBodyViewModel.TermsAndConditionsLabel,
+            ErrorMessage = EnterYourDetailsBodyViewModel.TermsAndConditionsValidationError,
+            CompareTo = $"*.{nameof(EnterYourDetailsBodyViewModel.IsTrue)}"
+        })
 
         @Html.HiddenFor(model => model.SelectedCategory)
         @Html.HiddenFor(model => model.MoreDetail)
