--- a/DFC.App.ContactUs/Views/Shared/_ErrorSummary.cshtml
+++ b/DFC.App.ContactUs/Views/Shared/_ErrorSummary.cshtml
@@ -2,7 +2,7 @@
     var showHideErrorSummary = "dfc-composite-shell-hide";
 }
 
-<div class="govuk-error-summary @showHideErrorSummary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+<div id="compuiShell-ErrorSummary" class="govuk-error-summary @showHideErrorSummary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
     <h2 class="govuk-error-summary__title" id="error-summary-title">
         There is a problem
     </h2>
