Added IDs to links and buttons, and a NAME to breadcrumb links to automated testing use

--- a/DFC.App.ContactUs/Views/Shared/Breadcrumb.cshtml
+++ b/DFC.App.ContactUs/Views/Shared/Breadcrumb.cshtml
@@ -10,7 +10,7 @@
                     if (path.AddHyperlink)
                     {
                         <li class="govuk-breadcrumbs__list-item">
-                            <a class="govuk-breadcrumbs__link" href="@path.Route">@path.Title</a>
+                            <a name="BreadbrumbLink" class="govuk-breadcrumbs__link" href="@path.Route">@path.Title</a>
                         </li>
                     }
                     else
