--- a/DFC.App.ContactUs/Views/WhyContactUs/WhyContactUsForm.cshtml
+++ b/DFC.App.ContactUs/Views/WhyContactUs/WhyContactUsForm.cshtml
@@ -15,7 +15,7 @@
         @Html.EditorFor(model => model.MoreDetail)
 
     </fieldset>
-    <button class="govuk-button" data-module="govuk-button">
+    <button id="WhyContactUsNextButton" class="govuk-button" data-module="govuk-button">
         Next
     </button>
 </div>
