--- a/DFC.App.ContactUs/Views/Chat/ChatBody.cshtml
+++ b/DFC.App.ContactUs/Views/Chat/ChatBody.cshtml
@@ -11,7 +11,7 @@
                 <p class="govuk-body">
                     This is connected to the
                     <strong><span class="dfc-app-contact-us-IsProdHightlight">PROD</span></strong>
-                    version of SERCO's webchat - as their test environment (<a href="@sercoTestUrl">@sercoTestUrl</a>) is only spun up when needed.
+                    version of SERCO's webchat - as their test environment (<a id="SercoTestUrlLink" href="@sercoTestUrl">@sercoTestUrl</a>) is only spun up when needed.
                 </p>
             </div>
         </div>
