--- a/DFC.App.ContactUs/Views/EnterYourDetails/EnterYourDetailsForm.cshtml
+++ b/DFC.App.ContactUs/Views/EnterYourDetails/EnterYourDetailsForm.cshtml
@@ -52,7 +52,7 @@
 
     <br />
 
-    <button class="govuk-button" data-module="govuk-button">
+    <button id="EnterYourDetailsSendButton" class="govuk-button" data-module="govuk-button">
         Send
     </button>
 </div>
