--- a/DFC.App.ContactUs/Views/WhyContactUs/EditorTemplates/Category.cshtml
+++ b/DFC.App.ContactUs/Views/WhyContactUs/EditorTemplates/Category.cshtml
@@ -1,6 +1,7 @@
-﻿@model Category
+﻿@using Category = DFC.App.ContactUs.Data.Enums.Category
+@model DFC.App.ContactUs.Data.Enums.Category
 
-@{ 
+@{
     var showErrorClass = string.Empty;
     var errorKey = nameof(WhyContactUsBodyViewModel.SelectedCategory);
 
